# new_octocan

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/nac/share/ament_index/resource_index/parent_prefix_path/: nac
install/nac/share/nac/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/octocan/share/octocan/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/octocan/share/octocan/cmake/: ament_cmake_export_dependencies-extras.cmake  octocanConfig.cmake
install/re2_flexiforce/share/re2_flexiforce/: package.bash  package.zsh
log/: latest_build
src/nac/: CMakeLists.txt  package.xml
src/nac/include/nac_controller/: nac_nn_two.h
src/nac/src/: nac_nn_two.cpp
src/octocan/: CMakeLists.txt  chatgpt-export_ROS 2 CMake Update.md  package.xml
src/octocan/include/octo_lib/: layout.h
src/octocan/src/: cmdline.c  layout.c  profile.c  profile.h  skintalk.c  skintalk.h  util.h
src/re2_flexiforce/: CMakeLists.txt  package.xml
src/re2_flexiforce/include/re2_flexiforce/: neuroAdaptControl.h
src/re2_flexiforce/src/: NAC_Trajectory_Testing.cpp  OctoCan_pub.cpp  RE2_fk_node.cpp  RE2_ik_node.cpp  joint_state_pub.cpp  neuroAdaptControl_node.cpp
