<?xml version="1.0"?>
<package format="3">
  <name>nac</name>
  <version>0.0.0</version>
  <description>The nac package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example: -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jordan@todo.todo">jordan</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/nac</url> -->

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <!-- The depend tags are used to specify dependencies -->
  <!-- Dependencies can be ament packages or system dependencies -->
  <!-- Use depend for both build and exec dependencies -->
  <!-- Use build_depend for compile-time dependencies -->
  <!-- Use exec_depend for runtime dependencies -->
  <!-- Use test_depend for testing dependencies -->
  <!-- Use doc_depend for documentation dependencies -->
  
  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>octocan</build_depend>

  <!-- Exported build dependencies -->
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>rclpy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>octocan</build_export_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>realtime_tools</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>eigen3_cmake_module</exec_depend>
  <exec_depend>octocan</exec_depend>
  
  <!-- ROS2 doesn't have an equivalent to ROS1's export tag for message generation -->
  <export>
    <!-- Any other export information can go here -->
  </export>
</package>
