<?xml version="1.0"?>
<package format="2">
  <name>re2_flexiforce</name>
  <version>1.0.0</version>
  <description>The arna_example package. This is an example of how to control the RE2 ARNA manipulator and end-effector.</description>

  <maintainer email="info@resquared.com">RE2, Inc.</maintainer>

  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>hebiros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>
  


  <depend>rosbag</depend>
  <depend>actionlib</depend>
  <depend>visualization_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>eigen_conversions</depend>
  <depend>kdl_parser</depend>
  <depend>sensor_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>octocan</depend>
  <depend>trac_ik_lib</depend>
  <depend>kdl_conversions</depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>hebiros</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>

</package>
