<?xml version="1.0"?>
<package format="3">
  <name>re2_flexiforce</name>
  <version>1.0.0</version>
  <description>The arna_example package. This is an example of how to control the RE2 ARNA manipulator and end-effector.</description>

  <maintainer email="info@resquared.com">RE2, Inc.</maintainer>

  <license>Proprietary</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>rosbag2</build_depend>
  <build_depend>octocan</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Dependencies needed for the runtime execution of the package -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>orocos_kdl</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>realtime_tools</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>rosbag2</exec_depend>
  <exec_depend>octocan</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>trac_ik_lib</exec_depend>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

